[project]
name = "project1-25-555"
version = "0.1.0"
description = ""
authors = [
    {name = "natpavge",email = "natpav.ge@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "labyrinth_game" },
]

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[dependency-groups]
dev = [
    "ruff (>=0.14.11,<0.15.0)"
]
